cmake_minimum_required(VERSION 3.17)
project(modern-clang-examples VERSION 1.0.0)

enable_testing()

add_subdirectory(arrays)
add_subdirectory(conditionals)
add_subdirectory(functions)
add_subdirectory(loops)
add_subdirectory(operators)
add_subdirectory(data-types)
add_subdirectory(pointers)
add_subdirectory(pointer-practice)
add_subdirectory(strings)
add_subdirectory(structs)
add_subdirectory(sqlite3-hello-world)
add_subdirectory(typedefs-enums)
add_subdirectory(variable-scope)

if (WIN32)
    add_subdirectory(wininet)
    add_subdirectory(winsock)
    add_subdirectory(win32-color-printf)
endif (WIN32)
